# LR

./: .gitignore  BUILD  CMakeLists.txt  README.md  ftrl.h  main.cc  main.cpp  utils.cc  utils.hpp
common/: BUILD  CMakeLists.txt  utils.cc  utils.h
data/: w.txt
data/predict/.svn/: all-wcprops  entries
data/predict/.svn/text-base/: part0.svn-base
data/test/.svn/: all-wcprops  entries
data/train/: part0
data/train/.svn/: all-wcprops  entries
ftrl/: BUILD  CMakeLists.txt  ftrl.cc  ftrl.h
io/: BUILD  CMakeLists.txt  filesys.h  local_filesys.cc  local_filesys.h  parser.cc  parser.h
sgd/: sgd.cc  sgd.h
src/: BUILD  Makefile  base_model.h  fast_ftrl.cc  fast_ftrl.h  fast_ftrl_lr.cc  fast_ftrl_lr.h  ftrl.cc  ftrl.h  ftrl_lr.cc  ftrl_lr.h  main.cc  nohup.out  utils.cc  utils.h
src/common/: BUILD  config.cc  config.h  math.h  murmurhash.h  utils.cc  utils.h
src/ftrl/: BUILD  ftrl.cc  ftrl.h
src/io/: BUILD  filesys.h  parser.h
src/sgd/: BUILD  sgd.cc  sgd.h
